force-app/main/default/objects/Concern__c/Concern__c.object-meta.xml
<CustomObject>
    <label>Concern</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Concern Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concerns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>