force-app/main/default/objects/Concern__c/fields/Behavior_Response__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Response__c</fullName>
    <label>Behavior Response</label>
    <type>TextArea</type>
</CustomField>