force-app/main/default/objects/Concern__c/fields/Concern_Date__c.field-meta.xml
<CustomField>
    <fullName>Concern_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Concern Date</label>
    <type>Date</type>
</CustomField>