force-app/main/default/objects/Concern__c/fields/Concern_Reported__c.field-meta.xml
<CustomField>
    <fullName>Concern_Reported__c</fullName>
    <label>Concern Reported</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>