force-app/main/default/objects/Concern__c/fields/Concern_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Concern_Reported_By__c</fullName>
    <label>Concern Reported By</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>